--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav ul li{
     color: white;
     font-weight: 600;
     font-size: 17px;
-    padding: 10px 30px;
+    padding: 8px 20px;
     border-radius: 20px;
 }
 nav ul li a{
@@ -92,3 +92,34 @@ width: 30px;
 
 /* body part */
 
+/* OUR DESTINATIONS */
+     
+.OUR-DESTINATIONS{
+    border: 5px solid green;
+    width: 100%;
+    height: 100%;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section-titel{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.cards{
+    border:3px solid black;
+    margin:30px;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-row-gap: 30px;
+}
+.card{
+    border:3px solid blue;
+   
+    margin-left: 16px;
+    width: 350px;
+    height: 350px;
+}
