--- a/style.css
+++ b/style.css
@@ -123,3 +123,68 @@ width: 30px;
     width: 350px;
     height: 350px;
 }
+
+
+/* Your-Next-Holiday */
+.Your-Next-Holiday{
+    border: 5px solid blue;
+    width: 100%;
+    height: 200px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.hollyday{ border:  5px solid red;
+ 
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+ ;
+}
+.holly-text{border:  5px solid red;
+    margin-right: 30px;
+}
+.holly-button{
+
+}
+/* The Best Beaches */
+
+
+.The-Best-Beaches{
+    border: 5px solid yellow;
+    width: 100%;
+    height: 500px;
+    margin-top: 30px;
+    display: flex;
+    flex-basis: 50%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+.beach-titel{
+    border: 5px solid deeppink;
+    height: 450px;
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.btn-2{
+ background: none;
+border: 1px solid red;
+padding: 10px 20px;
+margin: 10px;
+}
+
+.beach-img{
+    border: 5px solid deeppink;
+    height: 450px;
+    width: 450px;
+}
+.beach-img img{
+    width: 100%;
+    height: 100%;
+}
