--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ height: 200px
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 
 }
 .OUR-PACKAGES{
@@ -264,6 +265,7 @@ height: 200px
     flex-direction: column;
     align-self: flex-start;
     padding: 10px;
+    margin-right: 20px;
 
 }
 .PACKAGES-lmg {
@@ -279,4 +281,63 @@ hr{
     margin-top: 20px;
     margin-bottom: 20px;
     width: 90%;
+}
+.relax{
+    display: flex;
+    justify-content: space-around;
+}
+
+/* ending part */
+
+.end{border:3px solid black;
+    width: 100%;
+    height: 600px;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.ending-head{border:3px solid rgb(212, 35, 35);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    width: 1140px;
+    height: 150px;
+}
+.ending-title{
+    margin-right: 350px;
+}
+.ending-banar{border:3px solid rgb(116, 11, 11);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 1140px;
+    height: 350px;
+
+}
+
+
+.end-discription{border:3px solid rgb(116, 11, 11);
+width: 500px;
+height: 250px;
+}
+.end-nav{ border:3px solid rgb(116, 11, 11);
+    background-color: coral;
+    width: 500px;
+    height: 250px;
+    display: grid;
+    grid-template-columns:repeat(3,1fr);
+}
+.end-nav ul{
+    list-style:none;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+}
+.end-nav ul li{
+    margin: 5px;
+    padding: 2px;
 }
