--- a/style.css
+++ b/style.css
@@ -9,15 +9,18 @@
 
 /* head iteam */
 header{
-    background-color: brown;
+    background-image: url(photo/bacground/head.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
    display: flex;
    flex-direction: column;
    align-items: center;
-   height: 700px;
+   height: 800px;
 }
 
 .nav-container{ 
-  border: 2px solid black;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -83,6 +86,7 @@ width: 30px;
     grid-template-columns: repeat(4,1fr);
 }
 .box{
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
     border: 1px solid red;
     margin: 20px;
     padding: 10px;
@@ -116,9 +120,62 @@ width: 30px;
     grid-template-columns: repeat(3,1fr);
     grid-row-gap: 30px;
 }
-.card{
+.card-1{
     border:3px solid blue;
-   
+    background-image: url(photo/contry/italy.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
+    margin-left: 16px;
+    width: 350px;
+    height: 350px;
+}
+.card-2 {
+    border:3px solid blue;
+    background-image: url(photo/contry/hongkong.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
+    margin-left: 16px;
+    width: 350px;
+    height: 350px;
+}
+.card-3{
+    border:3px solid blue;
+    background-image: url(photo/contry/nland.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
+    margin-left: 16px;
+    width: 350px;
+    height: 350px;
+}
+.card-4{
+    border:3px solid blue;
+    background-image: url(photo/contry/pexels-adhitya-andanu-1561863.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
+    margin-left: 16px;
+    width: 350px;
+    height: 350px;
+}
+.card-5{
+    border:3px solid blue;
+    background-image: url(photo/contry/pexels-pixabay-460376.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
+    margin-left: 16px;
+    width: 350px;
+    height: 350px;
+}
+.card-6{
+    border:3px solid blue;
+    background-image: url(photo/contry/pexels-viktor-mogilat-3979108.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
     margin-left: 16px;
     width: 350px;
     height: 350px;
@@ -128,8 +185,12 @@ width: 30px;
 /* Your-Next-Holiday */
 .Your-Next-Holiday{
     border: 5px solid blue;
+    background-image: url(photo/contry/endbanner.jpg);
+    background-position: bottom;
+    box-sizing: border-box;
+    background-size:cover ;
     width: 100%;
-    height: 200px;
+    height: 250px;
     margin-top: 100px;
     display: flex;
     flex-direction: column;
@@ -216,10 +277,18 @@ width: 900px;
     height: 200px;
 }
 .cites{
+    background-image: url(photo/contry/city.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
     flex-basis: 100%;
 background-color: rgba(222, 184, 135, 0.671);
 }
 .naturs{
+    background-image: url(photo/contry/nature.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
     flex-basis: 100%;
 background-color: rgba(95, 158, 160, 0.849);
 }
@@ -290,6 +359,10 @@ hr{
 /* ending part */
 
 .end{border:3px solid black;
+    background-image: url(photo/contry/endbanner.jpg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size:cover ;
     width: 100%;
     height: 600px;
     display: flex; 
