--- a/style.css
+++ b/style.css
@@ -129,7 +129,23 @@ width: 30px;
     margin-left: 16px;
     width: 350px;
     height: 350px;
+    position: relative;
+    cursor: pointer;
+    transition: background-color .8s ease-in-out ;
+} 
+.card-1:hover{
+    background-color: #1e90ff;
+    background-image: none;
+    
 }
+.card-1 h1{
+    color: white;
+    position: absolute;
+    top: 280px;
+    left: 20px;
+}
+
+
 .card-2 {
     border:3px solid blue;
     background-image: url(photo/contry/hongkong.jpg);
@@ -139,6 +155,14 @@ width: 30px;
     margin-left: 16px;
     width: 350px;
     height: 350px;
+    position: relative;
+     
+}
+.card-2 h1{
+    color: white;
+    position: absolute;
+    top: 280px;
+    left: 20px;
 }
 .card-3{
     border:3px solid blue;
@@ -149,6 +173,13 @@ width: 30px;
     margin-left: 16px;
     width: 350px;
     height: 350px;
+    position: relative;
+}
+.card-3 h1{
+    color: white;
+    position: absolute;
+    top: 280px;
+    left: 20px;
 }
 .card-4{
     border:3px solid blue;
@@ -159,6 +190,13 @@ width: 30px;
     margin-left: 16px;
     width: 350px;
     height: 350px;
+    position: relative;
+}
+.card-4 h1{
+    color: white;
+    position: absolute;
+    top: 280px;
+    left: 20px;
 }
 .card-5{
     border:3px solid blue;
@@ -169,6 +207,13 @@ width: 30px;
     margin-left: 16px;
     width: 350px;
     height: 350px;
+    position: relative;
+}
+.card-5 h1{
+    color: white;
+    position: absolute;
+    top: 280px;
+    left: 20px;
 }
 .card-6{
     border:3px solid blue;
@@ -179,6 +224,13 @@ width: 30px;
     margin-left: 16px;
     width: 350px;
     height: 350px;
+    position: relative;
+}
+.card-6 h1{
+    color: white;
+    position: absolute;
+    top: 280px;
+    left: 20px;
 }
 
 
@@ -383,6 +435,7 @@ hr{
     margin-right: 350px;
 }
 .ending-banar{border:3px solid rgb(116, 11, 11);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -398,7 +451,7 @@ width: 500px;
 height: 250px;
 }
 .end-nav{ border:3px solid rgb(116, 11, 11);
-    background-color: coral;
+     
     width: 500px;
     height: 250px;
     display: grid;
