--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ header{
     display: flex;
     align-items: center;
     flex-direction: row;
+    width: 100%;
+    height: 100px;
 }
 
 
@@ -60,7 +62,7 @@ nav ul li{
 nav ul li a{
  text-decoration: none;
  color: white;
- font-weight: 600;
+ font-weight: bold;
  font-size: 17px;
 }
  
@@ -131,159 +133,86 @@ width: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.cards{
-   
+.cards{  
     margin:30px;
     padding: 30px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-row-gap: 30px;
 }
-.card-1{
-     
-    background-image: url(photo/contry/italy.jpg);
-    background-position: center;
-    box-sizing: border-box;
-    background-size:cover ;
+.card{  
     margin-left: 16px;
-    width: 350px;
-    height: 350px;
-    position: relative;
+    width: 290px;
+    height: 360px;
     cursor: pointer;
-    transition: 0.8s;
+    padding: 15px;
+    background: #fff;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
     box-shadow: 1px 1px 5px gray;
+    transition: 0.5s ease-in-out;
 } 
-.card-1:hover{
-     transform: translateY(-5px);
-    
-}
-.card-1 h1{
-    color: white;
-    position: absolute;
-    top: 280px;
-    left: 20px;
-}
 
+.card:hover{
+    transform: translateY(-10px);
+}
+.card:before{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(25, 158, 158, 0.521);
+    z-index: 2;
+    transition: .5s all;
+    opacity: 0;
+}
+.card:hover:before{
+    opacity: 1;
+}
+.card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top:0;
+    left:0;
+}
+.card .card-info{
+    position: relative;
+    z-index: 3;
+    color: #fff;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: .5s all;
+}
+.card:hover .card-info{
+    opacity: 1;
+    transform: translateY(0px);   
+}
+.card .card-info h1{
+    margin: 0;
 
-.card-2 {
-    
-    background-image: url(photo/contry/hongkong.jpg);
-    background-position: center;
-    box-sizing: border-box;
-    background-size:cover ;
-    margin-left: 16px;
-    width: 350px;
-    height: 350px;
-    position: relative;
+}
+.card .card-info p{
+    letter-spacing: 1px;
+    font-size: 15px;
+    margin-top: 8px;
+    margin-bottom: 20px;
+}
+.card .card-info .btn{
+    text-decoration: none;
+    padding: 5px 30px;
+    background: #fff;
+    font-weight: bold;
     cursor: pointer;
-    transition: 0.8s;
-    box-shadow: 1px 1px 5px gray;
+    transition: .4s ease-in-out;
 }
-.card-2:hover{
-    transform: translateY(-5px);
-   
-}
-.card-2 h1{
-    color: white;
-    position: absolute;
-    top: 280px;
-    left: 20px;
-}
-.card-3{
-    
-    background-image: url(photo/contry/nland.jpg);
-    background-position: center;
-    box-sizing: border-box;
-    background-size:cover ;
-    margin-left: 16px;
-    width: 350px;
-    height: 350px;
-    position: relative;
-    cursor: pointer;
-    transition: 0.8s;
-    box-shadow: 1px 1px 5px gray;
-}
-.card-3:hover{
-    transform: translateY(-5px);
-   
-}
-.card-3 h1{
-    color: white;
-    position: absolute;
-    top: 280px;
-    left: 20px;
-}
-.card-4{
-    
-    background-image: url(photo/contry/pexels-adhitya-andanu-1561863.jpg);
-    background-position: center;
-    box-sizing: border-box;
-    background-size:cover ;
-    margin-left: 16px;
-    width: 350px;
-    height: 350px;
-    position: relative;
-    cursor: pointer;
-    transition: 0.8s;
-    box-shadow: 1px 1px 5px gray;
-}
-.card-4:hover{
-    transform: translateY(-5px);
-   
-}
-.card-4 h1{
-    color: white;
-    position: absolute;
-    top: 280px;
-    left: 20px;
-}
-.card-5{
-     
-    background-image: url(photo/contry/pexels-pixabay-460376.jpg);
-    background-position: center;
-    box-sizing: border-box;
-    background-size:cover ;
-    margin-left: 16px;
-    width: 350px;
-    height: 350px;
-    position: relative;
-    cursor: pointer;
-    transition: 0.8s;
-    box-shadow: 1px 1px 5px gray;
-}
-.card-5:hover{
-    transform: translateY(-5px);
-   
-}
-.card-5 h1{
-    color: white;
-    position: absolute;
-    top: 280px;
-    left: 20px;
-}
-.card-6{
-    
-    background-image: url(photo/contry/pexels-viktor-mogilat-3979108.jpg);
-    background-position: center;
-    box-sizing: border-box;
-    background-size:cover ;
-    margin-left: 16px;
-    width: 350px;
-    height: 350px;
-    position: relative;
-    cursor: pointer;
-    transition: 0.8s;
-    box-shadow: 1px 1px 5px gray;
-}
-.card-6:hover{
-    transform: translateY(-5px);
-   
-}
-.card-6 h1{
-    color: white;
-    position: absolute;
-    top: 280px;
-    left: 20px;
+.card .card-info .btn:hover{
+    box-shadow: 0px 7px 10px  rgba(0.0,0,0.7);
 }
 
 
